[Fix] fix title alignent

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -5,7 +5,7 @@
     color: $default-tint;
     font-family: $serif-secondary;
     letter-spacing: 0.5px;
-    text-align: center;
+    text-align: left;
 
     span {
       font-style: italic;
@@ -16,14 +16,14 @@
     color: $default-shade;
     font-family: $sans-serif;
     font-size: 4rem;
-    margin: 1rem 0;
-    text-align: center;
+    margin: 1rem 0 0 0;
+    text-align: left;
   }
 
   &-line {
     border-top: 0.4rem solid $default-shade;
     display: block;
-    margin: 0 auto 3rem;
+    margin: 1rem 0 3rem 0;
     width: 4rem;
   }
 
