--- a/_sass/tale/_tags.scss
+++ b/_sass/tale/_tags.scss
@@ -4,20 +4,20 @@
       color: $default-shade;
       font-family: $sans-serif;
       font-size: 4rem;
-      margin: 1rem 0;
-      text-align: center;
+      margin: 1rem 0 0 0;
+      text-align: left;
     }
 
     &-line {
       border-top: 0.4rem solid $default-shade;
       display: block;
-      margin: 0 auto 3rem;
+      margin: 1rem 0 3rem 0;
       width: 4rem;
     }
   }
 
   &-clouds {
-    text-align: center;
+    text-align: left;
     font-family: $sans-serif;
 
     a {
